fixed fade on mobile nav

--- a/src/nav.css
+++ b/src/nav.css
@@ -11,11 +11,12 @@
 
 .visible {
     opacity: 1;
+    transition: background-color 0.5s ease, top 0.5s ease-in-out;
 }
 
 .dark {
     background-color: black!important;
-    transition: background-color 0.5s ease, opacity 0.6s ease-in-out;;
+    transition: background-color 0.5s ease, opacity 0.6s ease-in-out;
 }
 
 
